Precompile the hot path.