@@ -7,6 +7,7 @@
   :java-source-paths ["src/java"]
   :dependencies [[org.clojure/clojure "1.10.1"]
                  [com.github.javafaker/javafaker "1.0.2"]]
+  :jvm-opts ["-Xverify:none"]
   :profiles
   {:provided
    {:dependencies [[org.apache.kafka/connect-api "2.4.0"]]}
@@ -14,7 +15,8 @@
    {:global-vars {*warn-on-reflection* true}
     :dependencies [[org.clojure/test.check "1.0.0"]
                    [com.gfredericks/test.chuck "0.2.10"]
-                   [com.theinternate/generators.graph "0.0-37"]]}
+                   [com.theinternate/generators.graph "0.0-37"]
+                   [criterium "0.4.5"]]}
    :uberjar
    {:aot :all
     :uberjar-name "voluble-uberjar-%s.jar"}})
